// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render children 1`] = `
<button>
  Click
</button>
`;

exports[`should render children 2`] = `
<button>
  Loading
</button>
`;

exports[`should render children 3`] = `
<button>
  Success
</button>
`;

exports[`should render error when callback throws 1`] = `
<button>
  Error
</button>
`;
